clusters/mharikmert.dev/default/blog/blog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deploy
  namespace: default
spec:
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - image: ghcr.io/mharikmert/blog:v0.0.8 # {"$imagepolicy": "flux-system:blog-image-policy"}
          name: blog-container
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
