clusters/mharikmert.dev/default/blog/blog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog-svc
  name: blog-svc
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: blog
  type: ClusterIP
